--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
          <input type="number" id="num1" placeholder="1º número">
          <input type="number" id="num2" placeholder="2º número">
          <button id="btn" disabled>Verificar</button>
+         <p id="msg"></p>
       </div>
    
 </body>
